--- a/Broadway/.vscode/launch.json
+++ b/Broadway/.vscode/launch.json
@@ -7,7 +7,7 @@
         {
             "type": "chrome",
             "request": "launch",
-            "name": "Open index.html",
+            "name": "open index.html",
             "file":"${workspaceFolder}/index.html"
         }
     ]
