--- a/Codebrainery.io/.vscode/launch.json
+++ b/Codebrainery.io/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "chrome",
             "request": "launch",
             "name": "Open index.html",
-            "file": "c:\\Users\\shell\\Codecademy\\Projects\\CodeBrainery_Lesson\\index.html"
+            "file": "c:\\Users\\shell\\Codecademy\\Projects\\Codebrainery.io\\index.html"
         }
     ]
 }
